Provide histograms to prometheus and grafana

--- a/psdaq/psdaq/cnf/lab3-ric.cnf
+++ b/psdaq/psdaq/cnf/lab3-ric.cnf
@@ -53,15 +53,15 @@ procmgr_config = [
  {                         id:'control_gui', flags:'p',   conda:conda_rel,                cmd:'control_gui -H '+collect_host},
 
  # TEB
- #{ host: 'drp-tst-dev016', id:'teb0',        flags:'sxpu', conda:conda_rel, cmd:teb_cmd},
+ { host: 'drp-tst-dev016', id:'teb0',        flags:'sxpu', conda:conda_rel, cmd:teb_cmd},
  #{ host: 'drp-tst-dev015', id:'teb1',        flags:'sxpu', conda:conda_rel, cmd:teb_cmd},
 
  # MEB
- #{ host: 'drp-tst-dev016', id:'meb0',        flags:'sxpu', conda:conda_rel, cmd:meb_cmd},
+ { host: 'drp-tst-dev016', id:'meb0',        flags:'sxpu', conda:conda_rel, cmd:meb_cmd},
  #{ host: 'drp-tst-dev015', id:'meb1',        flags:'sxpu', conda:conda_rel, cmd:meb_cmd},
 
  # PVA
- #{ host: 'drp-tst-dev002', id:'pvcam_0',     flags:'xpu', conda:conda_rel, env:epics_env, cmd:pva_cmd+'-D pvcam '+'DAQ:LAB2:PVCAM'},
+ { host: 'drp-tst-dev002', id:'pvcam_0',     flags:'xpu', conda:conda_rel, env:epics_env, cmd:pva_cmd+'-l 0x4 -D pvcam '+'DAQ:LAB2:PVCAM'},
 
  # EpicsArch
  #{ host: 'drp-tst-dev004', id:'epics_0',     flags:'xpu', conda:conda_rel, env:epics_env, cmd:ea_cmd},
@@ -91,9 +91,9 @@ procmgr_config = [
  #{ host: 'drp-tst-dev011', id:'cam_5',  flags:'sxpu', conda:conda_rel, cmd: drp_cmd+' -D fakecam' },
  #{ host: 'drp-tst-dev012', id:'cam_6',  flags:'sxpu', conda:conda_rel, cmd: drp_cmd+' -D fakecam' },
  #{ host: 'drp-tst-dev013', id:'cam_7',  flags:'sxpu', conda:conda_rel, cmd: drp_cmd+' -D fakecam' },
- #{ host: 'drp-tst-dev014', id:'cam_8',  flags:'sxpu', conda:conda_rel, cmd: drp_cmd+' -D fakecam' },
- #{ host: 'drp-tst-dev015', id:'cam_9',  flags:'sxpu', conda:conda_rel, cmd: drp_cmd+' -D fakecam' },
- #{ host: 'drp-tst-dev017', id:'cam_10', flags:'sxpu', conda:conda_rel, cmd: drp_cmd+' -D fakecam' },
+ { host: 'drp-tst-dev014', id:'cam_8',  flags:'sxpu', conda:conda_rel, cmd: drp_cmd+' -D fakecam' },
+ { host: 'drp-tst-dev015', id:'cam_9',  flags:'sxpu', conda:conda_rel, cmd: drp_cmd+' -D fakecam' },
+ { host: 'drp-tst-dev017', id:'cam_10', flags:'sxpu', conda:conda_rel, cmd: drp_cmd+' -D fakecam' },
 
  # procstat
  {                         id:'procstat',    flags:'p',   conda:conda_rel,                cmd:'procstat p'+platform+'.cnf.last'},
@@ -106,8 +106,8 @@ pv   = 2
 drp  = 3
 hsds = [
 
-    {node:'daq-tst-dev07',bus:'1b',pv:'DAQ:LAB2:HSD:DEV07_1B',drp:'drp-tst-dev008'},
-    {node:'daq-tst-dev07',bus:'1a',pv:'DAQ:LAB2:HSD:DEV07_1A',drp:'drp-tst-dev010'},
+    #{node:'daq-tst-dev07',bus:'1b',pv:'DAQ:LAB2:HSD:DEV07_1B',drp:'drp-tst-dev008'},
+    #{node:'daq-tst-dev07',bus:'1a',pv:'DAQ:LAB2:HSD:DEV07_1A',drp:'drp-tst-dev010'},
 ]
 
 hsd_cmd0 = task_set+'drp '+std_opts0+' -l 0x1'
@@ -116,17 +116,17 @@ hsd_cmd1 = task_set+'drp '+std_opts1+' -l 0x1'
 port=29074 + 100*int(platform)
 segm=0
 pvlist = []
-#for e in hsds:
-#    procmgr_config.append({id:'hsdpvs_%s_a'%e[bus], port:'%d'%port, flags:'s', conda:conda_rel, env:epics_env, cmd:'hsdpvs -P '+e[pv]+':A'})
-#    port += 1
-#    procmgr_config.append({id:'hsdpvs_%s_b'%e[bus], port:'%d'%port, flags:'s', conda:conda_rel, env:epics_env, cmd:'hsdpvs -P '+e[pv]+':B'})
-#    port += 1
-#    procmgr_config.append({ host: e[node], id:'hsdioc_%s'%e[bus], flags:'', conda:conda_rel, env:epics_env, cmd:'hsd134PVs -P '+e[pv]+' -d /dev/pcie_adc_%s'%e[bus]})
-#    procmgr_config.append({ host: e[drp], id:'tmohsd_%d'%segm, flags:'pu', conda:conda_rel, cmd:hsd_cmd0+' -D hsd -k hsd_epics_prefix='+e[pv]+':A'})
-#    segm += 1
-#    procmgr_config.append({ host: e[drp], id:'tmohsd_%d'%segm, flags:'pu', conda:conda_rel, cmd:hsd_cmd1+' -D hsd -k hsd_epics_prefix='+e[pv]+':B'})
-#    segm += 1
-#    pvlist.append(e[pv]+':A')
-#    pvlist.append(e[pv]+':B')
-#
-#procmgr_config.append({id:'hsdpva', flags:'', conda:conda_rel, env:epics_env, cmd:'hsdpva '+' '.join(pvlist)})
+for e in hsds:
+    procmgr_config.append({id:'hsdpvs_%s_a'%e[bus], port:'%d'%port, flags:'s', conda:conda_rel, env:epics_env, cmd:'hsdpvs -P '+e[pv]+':A'})
+    port += 1
+    procmgr_config.append({id:'hsdpvs_%s_b'%e[bus], port:'%d'%port, flags:'s', conda:conda_rel, env:epics_env, cmd:'hsdpvs -P '+e[pv]+':B'})
+    port += 1
+    procmgr_config.append({ host: e[node], id:'hsdioc_%s'%e[bus], flags:'', conda:conda_rel, env:epics_env, cmd:'hsd134PVs -P '+e[pv]+' -d /dev/pcie_adc_%s'%e[bus]})
+    procmgr_config.append({ host: e[drp], id:'tmohsd_%d'%segm, flags:'pu', conda:conda_rel, cmd:hsd_cmd0+' -D hsd -k hsd_epics_prefix='+e[pv]+':A'})
+    segm += 1
+    procmgr_config.append({ host: e[drp], id:'tmohsd_%d'%segm, flags:'pu', conda:conda_rel, cmd:hsd_cmd1+' -D hsd -k hsd_epics_prefix='+e[pv]+':B'})
+    segm += 1
+    pvlist.append(e[pv]+':A')
+    pvlist.append(e[pv]+':B')
+
+procmgr_config.append({id:'hsdpva', flags:'', conda:conda_rel, env:epics_env, cmd:'hsdpva '+' '.join(pvlist)})
