--- a/psdaq/psdaq/cnf/lab3-cpo.cnf
+++ b/psdaq/psdaq/cnf/lab3-cpo.cnf
@@ -35,8 +35,8 @@ procmgr_config = [
  {                        id:'hsdpva_3e', flags:'', conda:conda_rel, env:epics_env, cmd:'hsdpva '+hsd_epics_dev06+'_3E:A'},
  {                        id:'hsdpvb_3e', flags:'', conda:conda_rel, env:epics_env, cmd:'hsdpva '+hsd_epics_dev06+'_3E:B'},
  { host: 'daq-tst-dev06', id:'hsdioc_3e', flags:'x', conda:conda_rel, env:epics_env, cmd:'hsd134PVs -P '+hsd_epics_dev06+'_3E -d /dev/pcie_adc_3e'},
- { host: 'drp-tst-dev022', id:'xpphsd_0', flags:'xpu', conda:conda_rel, cmd:drp_cmd+' -D Digitizer -k hsd_epics_prefix='+hsd_epics_dev06+'_3E:A'},
- { host: 'drp-tst-dev023', id:'xpphsd_1', flags:'xpu', conda:conda_rel, cmd:drp_cmd+' -D Digitizer -k hsd_epics_prefix='+hsd_epics_dev06+'_3E:B'},
+ { host: 'drp-tst-dev022', id:'xpphsd_0', flags:'xpu', conda:conda_rel, cmd:drp_cmd+' -D hsd -k hsd_epics_prefix='+hsd_epics_dev06+'_3E:A'},
+ { host: 'drp-tst-dev023', id:'xpphsd_1', flags:'xpu', conda:conda_rel, cmd:drp_cmd+' -D hsd -k hsd_epics_prefix='+hsd_epics_dev06+'_3E:B'},
 
  {                        id:'groupca' , flags:'s', conda:conda_rel, env:epics_env, cmd:'groupca DAQ:LAB2 2 '+groups},
  {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat p'+platform+'.cnf.last'},
