--- a/psdaq/psdaq/cnf/lab3-hsd134_cg.cnf
+++ b/psdaq/psdaq/cnf/lab3-hsd134_cg.cnf
@@ -32,8 +32,8 @@ procmgr_config = [
  {                        id:'hsdpvb_3e', flags:'', conda:conda_rel, env:epics_env, cmd:'hsdpva DAQ:LAB2:HSD:DEV06_3E:B'},
  { host: 'daq-tst-dev06', id:'hsdioc_3e', flags:'', conda:conda_rel, env:epics_env, cmd:'hsd134PVs -P DAQ:LAB2:HSD:DEV06_3E -d /dev/pcie_adc_3e'},
 
- { host: 'drp-tst-dev022', id:'xpphsd_0', flags:'xpu', conda:conda_rel, cmd:'drp -l 0x1 -D Digitizer -d /dev/datadev_0 -C '+collect_host+' -o /ffb01/dev022'},
- { host: 'drp-tst-dev023', id:'xpphsd_1', flags:'xpu', conda:conda_rel, cmd:'drp -l 0x1 -D Digitizer -d /dev/datadev_0 -C '+collect_host+' -o /ffb01/dev023'},
+ { host: 'drp-tst-dev022', id:'xpphsd_0', flags:'xpu', conda:conda_rel, cmd:'drp -l 0x1 -D hsd -d /dev/datadev_0 -C '+collect_host+' -o /ffb01/dev022'},
+ { host: 'drp-tst-dev023', id:'xpphsd_1', flags:'xpu', conda:conda_rel, cmd:'drp -l 0x1 -D hsd -d /dev/datadev_0 -C '+collect_host+' -o /ffb01/dev023'},
 
  { host: 'drp-tst-dev002', id:'teb1', flags:'spu', conda:conda_rel, cmd:'teb -C '+collect_host},
  { host: 'drp-tst-dev023', id:'meb1', flags:'spu', conda:conda_rel, cmd:'monReqServer -P TMO -d -q 4 -C '+collect_host+' '},
