--- a/psdaq/psdaq/cnf/lab3-ts.cnf
+++ b/psdaq/psdaq/cnf/lab3-ts.cnf
@@ -28,7 +28,7 @@ procmgr_config = [
  {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
 
  { host: 'drp-tst-dev019', id:'teb1', flags:'spu', conda:conda_rel, cmd:'teb -C '+collect_host},
- { host: 'drp-tst-dev002', id:'xppts_0', flags:'spu', conda:conda_rel, cmd:drp_cmd+' -D TimingSystem'},
+ { host: 'drp-tst-dev002', id:'xppts_0', flags:'spu', conda:conda_rel, cmd:drp_cmd+' -D ts'},
  { host: collect_host, id:'control', flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -B DAQ:LAB2 -x 2 -C BEAM -P '+hutch},
  {                        flags:'p', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
 ]
