Add Opal segment level.  Fix conversion of TimeTool hex string configuration values.  Added fake camera keyword arg sim_length for setting frame length configuration.

--- a/psdaq/drp/CMakeLists.txt
+++ b/psdaq/drp/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(drp
     TimingSystem.cc
     TimeTool.cc
     Wave8.cc
+    Opal.cc
     PGPDetector.cc
     PGPDetectorApp.cc
     drp.cc
