--- a/psdaq/psdaq/CMakeLists.txt
+++ b/psdaq/psdaq/CMakeLists.txt
@@ -3,8 +3,8 @@ add_subdirectory(mmhw)
 add_subdirectory(cphw)
 add_subdirectory(eb)
 add_subdirectory(epicstools)
-add_subdirectory(dti)
-add_subdirectory(xpm)
+#add_subdirectory(dti)
+#add_subdirectory(xpm)
 add_subdirectory(hsd)
 add_subdirectory(bld)
 add_subdirectory(tpr)
