Remove cpsw dependence.  Build hpsBldServer with pyrogue and p4p.

--- a/psdaq/psdaq/CMakeLists.txt
+++ b/psdaq/psdaq/CMakeLists.txt
@@ -1,6 +1,8 @@
+find_package(PythonLibs REQUIRED)
+
 add_subdirectory(service)
 add_subdirectory(mmhw)
-add_subdirectory(cphw)
+#add_subdirectory(cphw)
 add_subdirectory(eb)
 add_subdirectory(epicstools)
 #add_subdirectory(dti)
