--- a/psdaq/psdaq/cnf/lab3-bld.cnf
+++ b/psdaq/psdaq/cnf/lab3-bld.cnf
@@ -3,7 +3,7 @@ username = 'lcls2'
 
 epics_host = 'daq-tst-dev02'
 epics_env  = 'EPICS_PVA_ADDR_LIST=172.21.151.255'
-conda_rel  = 'ps-2.0.5'
+conda_rel  = 'ps-2.1.3'
 
 shelf = '2'
 ip_addr = '10.0.'+shelf
@@ -18,6 +18,7 @@ bld_nodes = ['drp-tst-dev021','drp-tst-dev020']
 bld_cp = []
 for c in range(15):
     bld_cp.append('HPSCP%c'%chr(ord('A')+c))
+bld_cp = []
 
 bld_pv = bld_cp+['HPSEX']
 
@@ -56,10 +57,10 @@ bld_config = [
 
 bld_config.append({ host: epics_host,  id:'bldcas'           , flags:'s', conda:conda_rel, env:epics_env, cmd:'bldcas -P DAQ:LAB2 '+bldcas_str})
 
-for inode,pv in enumerate(bld_pv):
+for inode,pv in enumerate(bld_cp):
     bld_config.append({ host:epics_host, id:'hpsdbuscas-hpscp%c'%chr(ord('a')+inode), conda:conda_rel, env:epics_env, cmd:'hpsdbuscas -P DAQ:LAB2:'+pv})
 
-bld_config.append({ host: 'drp-tst-dev020',  id:'hpsbldsvc'  , flags:'s', conda:conda_rel, env:epics_env, cmd:'hpsBldServer -i eno2 -n DAQ:LAB2:HPSEX -p 0x1e0 -a 10.0.3.105'})
+bld_config.append({ host: 'drp-tst-dev020',  id:'hpsbldsvc'  , flags:'sx', conda:conda_rel, env:epics_env, cmd:'hpsBldServer -i eno2 -n DAQ:LAB2:HPSEX -p 0x1e0 -a 10.0.3.105'})
 
 for inode,pv in enumerate(bld_cp):
     bld_config.append({ host: bld_nodes[inode%len(bld_nodes)], id:'hpsbldcp%c'%chr(ord('a')+inode), flags:'s', conda:conda_rel, env:epics_env, cmd:'hpsBldCopy -i eno2 -I DAQ:LAB2:HPSEX -O DAQ:LAB2:'+pv+' -o %d'%(inode*200)})
@@ -72,9 +73,9 @@ base_config = [
  { host: 'drp-tst-dev019', id:'teb19'    , flags:'spu', conda:conda_rel, cmd:'teb -C '+collect_host},
  { host: 'drp-tst-dev016', id:'meb16',       flags:'spu', conda:conda_rel, cmd:'monReqServer -P tst -d -q 4 -C '+collect_host},
 
- { host: 'drp-tst-dev001', id:'xppts_0' , flags:'spu', conda:conda_rel, cmd:drp_cmd+' -D ts'},
+ { host: 'drp-tst-dev013', id:'xppts_0' , flags:'spu', conda:conda_rel, cmd:drp_cmd+' -D ts'},
 
- { host: collect_host, id:'control', flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -B DAQ:LAB2 -x 2 -P tst'},
+ { host: collect_host, id:'control', flags:'spu', conda:conda_rel, env:epics_env, cmd:'control -v -C NOBEAM -B DAQ:LAB2 -x 2 -P tst'},
  {                        flags:'p', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
 ]
 
