--- a/psdaq/psdaq/app/CMakeLists.txt
+++ b/psdaq/psdaq/app/CMakeLists.txt
@@ -1,5 +1,8 @@
 find_package(PythonLibs REQUIRED)
 
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
+
 add_library(app SHARED
     AppUtils.cc
 )
@@ -17,7 +20,7 @@ target_link_libraries(hpsBldServer
    bld
    epicstools
    dl
-   pthread
+   Threads::Threads
    rt
    ${PYTHON_LIBRARIES}
 )
@@ -36,7 +39,7 @@ target_link_libraries(hpsBldClient
    epicstools
    xtcdata::xtc
    dl
-   pthread
+   Threads::Threads
    rt
 )
 
@@ -53,7 +56,7 @@ target_link_libraries(hpsBldCopy
    epicstools
    xtcdata::xtc
    dl
-   pthread
+   Threads::Threads
    rt
 )
 
@@ -68,7 +71,7 @@ target_link_libraries(lclsBldServer
    app
    tpr
    dl
-   pthread
+   Threads::Threads
    rt
 )
 
@@ -83,7 +86,7 @@ target_link_libraries(tprtrig
    app
    tpr
    dl
-   pthread
+   Threads::Threads
    rt
 )
 
@@ -102,7 +105,7 @@ target_link_libraries(tprioc
    tpr
    app
    dl
-   pthread
+   Threads::Threads
    rt
 )
 
@@ -120,7 +123,7 @@ target_link_libraries(tprsh
    epicstools
    app
    dl
-   pthread
+   Threads::Threads
    rt
 )
 
@@ -137,7 +140,7 @@ target_include_directories(tprutil PUBLIC
 target_link_libraries(tprutil
    tpr
    dl
-   pthread
+   Threads::Threads
    rt
 )
 
@@ -154,7 +157,7 @@ target_include_directories(xcasttest PUBLIC
 target_link_libraries(xcasttest
    app
    dl
-   pthread
+   Threads::Threads
    rt
 )
 
@@ -172,7 +175,7 @@ target_link_libraries(pgpca
    service
    epicstools
    dl
-   pthread
+   Threads::Threads
    rt
 )
 
@@ -194,7 +197,8 @@ add_executable(json2xtc
 target_link_libraries(json2xtc
     xtcdata::xtc
     service
-    pthread
+    Threads::Threads
+    rt
 )
 
 target_include_directories(json2xtc PUBLIC
