--- a/psdaq/psdaq/bld/CMakeLists.txt
+++ b/psdaq/psdaq/bld/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
 
 add_library(bld SHARED
     HpsEventIterator.cc
@@ -8,6 +10,10 @@ add_library(bld SHARED
 target_include_directories(bld PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
     $<INSTALL_INTERFACE:include>
+)
+
+target_link_libraries(bld
+    Threads::Threads
 )
 
 install(TARGETS bld
