--- a/psdaq/psdaq/hsd/CMakeLists.txt
+++ b/psdaq/psdaq/hsd/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
 
 add_library(hsd SHARED
   AdcCore.cc
@@ -57,7 +59,7 @@ add_executable(hsd_eyescan hsd_eyescan.cc)
 
 target_link_libraries(hsd_eyescan
    dl
-   pthread
+   Threads::Threads
    service
    mmhw
    rt
@@ -72,7 +74,7 @@ target_link_libraries(hsd134PVs
     ${EPICS_PVDATA_LIB}
     ${EPICS_PVACCESS_LIB}
     ${EPICS_PVACLIENT_LIB}
-    pthread
+    Threads::Threads
     app
     hsd
     mmhw
@@ -84,7 +86,7 @@ add_executable(hsd126PVs hsd126PVs.cc PV126Ctrls.cc PVCtrlsBase.cc PV126Stats.cc
 target_link_libraries(hsd126PVs
     service
     epicstools
-    pthread
+    Threads::Threads
     app
     hsd
     mmhw
@@ -104,7 +106,7 @@ target_link_libraries(hsd_sim
 #)
 
 #target_link_libraries(hsd_validate
-#    pthread
+#    Threads::Threads
 #    hsd
 #    mmhw
 #    rt
@@ -129,7 +131,7 @@ target_link_libraries(hsdRead
    mmhw
    xtcdata::xtc
    epicstools
-   pthread
+   Threads::Threads
    rt
 )
 
