--- a/psdaq/psdaq/monreq/CMakeLists.txt
+++ b/psdaq/psdaq/monreq/CMakeLists.txt
@@ -1,3 +1,6 @@
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
+
 add_executable(monReqServer
     monReqServer.cc
 )
@@ -8,7 +11,7 @@ target_link_libraries(monReqServer
     eventBuilder
     collection
     exporter
-    pthread
+    Threads::Threads
     rt
 )
 
